# stadium-system-res

./: CMakeLists.txt  README.md  log.cpp  log.hpp  main.cpp  menu.cpp  menu.hpp  menu_main_func.cpp  person.hpp  seat.cpp  seat.hpp  stadium.cpp  stadium.hpp
.github/workflows/: stadium-system-res.yml
